Added missing unit tests for translate_ui_delegate

Added missing unit tests for translate_ui_delegate. Also added
missing EXPECT_CALL()s for RecordTranslationEvents.

Bug: 744223
Change-Id: Id78a230a8faa59295a58e13771401e7c989b4993
Reviewed-on: https://chromium-review.googlesource.com/572507
Reviewed-by: David Vallet <dvallet@chromium.org>
Commit-Queue: Jon Napper <napper@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487397}
Former-commit-id: 04f14d7d8e8cf7a2fc140a0bdc491953a008942a