components/translate/core/browser/translate_ui_delegate.h
@@ -11,6 +11,7 @@
 #include <string>
 #include <vector>
 
+#include "base/gtest_prod_util.h"
 #include "base/logging.h"
 #include "base/macros.h"
 #include "base/memory/weak_ptr.h"
@@ -122,6 +123,8 @@ class TranslateUIDelegate {
   bool ShouldAlwaysTranslateBeCheckedByDefault();
 
  private:
+  FRIEND_TEST_ALL_PREFIXES(TranslateUIDelegateTest, GetPageHost);
+
   // Gets the host of the page being translated, or an empty string if no URL is
   // associated with the current page.
   std::string GetPageHost();
